Project

General

Profile

Actions

Bug #41356

closed

[rbd-mirror] cannot connect to remote cluster when running as 'ceph' user

Added by Jason Dillaman over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Under Rook, the rbd-mirror daemon will be run under the 'ceph' user via the "--setuser XYZ" command-line argument. This, however, does not update the "HOME" environment variable and therefore the librados "parse_config_files" method will attempt to search "/root/.ceph/" for the config file. This will fail w/ a "-EPERM" error and abort the attempt to connect to the remote peer.


Related issues 3 (0 open3 closed)

Copied to rbd - Backport #41438: mimic: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' userResolvedNathan CutlerActions
Copied to rbd - Backport #41439: luminous: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' userResolvedNathan CutlerActions
Copied to rbd - Backport #41440: nautilus: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' userResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 29808
Actions #2

Updated by Mykola Golub over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41438: mimic: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' user added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41439: luminous: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' user added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41440: nautilus: [rbd-mirror] cannot connect to remote cluster when running as 'ceph' user added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF