rbd-mirror: ignore errors related to parsing the config file

If one or more of the default search paths throw an error like
-EPERM, no longer abort the attempt to connect to the cluster.
Previously, after dropping privileges librados would attempt to
access "/root/.ceph/<cluster name>.conf" and would fail due to
the error, even if all the necessary data to connect was available
via the mon config-key store.

Fixes: https://tracker.ceph.com/issues/41356
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 1e8c41e5f72b4f42bc87f2a8b6f45a853cc19faf)